# bk-retriever

./: .gitignore  .replit  README.md  app.py  autoretriever.py  data_loader.py  pyproject.toml  requirements.txt
data/: Episode_25_The_Warehouse_Job_part_1.txt  Episode_26_warehouse_job_part_2_smugglers_whiskers_ramsey.txt  a-mystery-equity-factor.md  bonds-plus-alternatives-and-chill.md  can-randomly-allocated-portfolios-generate-excess-returns.md  how-to-replicate-trend-following-managed-futures-whitepaper.md  return-stacking-and-the-cost-of-leverage.md  return-stacking-and-volatility-drag.md  stacking-the-odds-in-retirement.md  the-risks-of-leverage.md  tips-versus-commodities-just-return-stacking.md  tracking-error-return-stacking-versus-replacement.md  volatility-is-bad-for-your-wealth.md  what-is-return-stacking.md
tmp/: queries.txt
